--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,10 @@
     <!-- build:css({.tmp,client}) app/app.css -->
     <link rel="stylesheet" href="app/app.css">
       <!-- injector:css -->
+      <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="bower_components/angular/angular-csp.css">
+      <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
+      <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
