--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -9,6 +9,11 @@
     </div>
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="login(form)" novalidate>
+        <div class="form-group">
+          <select ng-model="user.account" class="form-control"
+            ng-options="account._id as account.name for account in accounts">
+          </select>
+        </div>
 
         <div class="form-group">
           <label>Email</label>
