--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,8 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
-          <script src="app/account/account.js"></script>
+          <script src="app/account/account-model.js"></script>
+          <script src="app/account/account.controller.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
