--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
       <link rel="stylesheet" href="bower_components/angular/angular-csp.css">
       <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
       <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -65,7 +66,10 @@
           <!-- injector:js -->
           <script src="app/account/account-model.js"></script>
           <script src="app/account/account.controller.js"></script>
+          <script src="app/account/account.js"></script>
+          <script src="app/account/confirm/confirm.controller.js"></script>
           <script src="app/account/login/login.controller.js"></script>
+          <script src="app/account/pwdreset/pwdreset.controller.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
@@ -73,6 +77,7 @@
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/auth/auth.service.js"></script>
+          <script src="components/auth/local.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
