--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
-  <body ng-app="fitbookerApp">
+  <body ng-app="app">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -76,6 +76,8 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/schedule/schedule.controller.js"></script>
+          <script src="app/schedule2/schedule.controller.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/local.service.js"></script>
           <script src="components/auth/user.service.js"></script>
