--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,7 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/schedule/schedule-model.js"></script>
           <script src="app/schedule/schedule.controller.js"></script>
           <script src="app/schedule2/schedule.controller.js"></script>
           <script src="components/auth/auth.service.js"></script>
